dartagnan/src/test/resources/spirv-clang/sourcelocation_tests/races/pass/read_read.spv.dis
; @Config: 3, 1, 3
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 21
; Schema: 0
               OpCapability Addresses
               OpCapability Linkage
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %9 "foo" %__spirv_BuiltInLocalInvocationId
               OpSource OpenCL_C 200000
               OpName %__spirv_BuiltInLocalInvocationId "__spirv_BuiltInLocalInvocationId"
               OpDecorate %__spirv_BuiltInLocalInvocationId BuiltIn LocalInvocationId
               OpDecorate %__spirv_BuiltInLocalInvocationId Constant
               OpDecorate %10 FuncParamAttr NoCapture
               OpDecorate %11 FuncParamAttr NoCapture
               OpDecorate %12 FuncParamAttr NoCapture
               OpDecorate %11 FuncParamAttr NoWrite
               OpDecorate %__spirv_BuiltInLocalInvocationId LinkageAttributes "__spirv_BuiltInLocalInvocationId" Import
       %uint = OpTypeInt 32 0
     %v3uint = OpTypeVector %uint 3
%_ptr_Input_v3uint = OpTypePointer Input %v3uint
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %8 = OpTypeFunction %void %_ptr_Workgroup_uint %_ptr_Workgroup_uint %_ptr_Workgroup_uint
%__spirv_BuiltInLocalInvocationId = OpVariable %_ptr_Input_v3uint Input
          %9 = OpFunction %void None %8
         %10 = OpFunctionParameter %_ptr_Workgroup_uint
         %11 = OpFunctionParameter %_ptr_Workgroup_uint
         %12 = OpFunctionParameter %_ptr_Workgroup_uint
         %13 = OpLabel
         %14 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
         %15 = OpCompositeExtract %uint %14 0
         %16 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %11 %15
         %17 = OpLoad %uint %16 Aligned 4
         %18 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %10 %15
               OpStore %18 %17 Aligned 4
         %19 = OpLoad %uint %16 Aligned 4
         %20 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %12 %15
               OpStore %20 %19 Aligned 4
               OpReturn
               OpFunctionEnd
