dartagnan/src/test/resources/spirv-clang/sourcelocation_tests/races/fail/read_write.spv.dis
; @Input: %11 = 9
; @Input: %15 = 9
; @Config: 9, 1, 1
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 20
; Schema: 0
               OpCapability Addresses
               OpCapability Linkage
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %9 "foo" %__spirv_BuiltInLocalInvocationId
               OpSource OpenCL_C 200000
               OpName %__spirv_BuiltInLocalInvocationId "__spirv_BuiltInLocalInvocationId"
               OpDecorate %__spirv_BuiltInLocalInvocationId BuiltIn LocalInvocationId
               OpDecorate %__spirv_BuiltInLocalInvocationId Constant
               OpDecorate %10 FuncParamAttr NoCapture
               OpDecorate %11 FuncParamAttr NoCapture
               OpDecorate %__spirv_BuiltInLocalInvocationId LinkageAttributes "__spirv_BuiltInLocalInvocationId" Import
       %uint = OpTypeInt 32 0
     %uint_8 = OpConstant %uint 8
     %v3uint = OpTypeVector %uint 3
%_ptr_Input_v3uint = OpTypePointer Input %v3uint
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %8 = OpTypeFunction %void %_ptr_Workgroup_uint %_ptr_Workgroup_uint
%__spirv_BuiltInLocalInvocationId = OpVariable %_ptr_Input_v3uint Input
          %9 = OpFunction %void None %8
         %10 = OpFunctionParameter %_ptr_Workgroup_uint
         %11 = OpFunctionParameter %_ptr_Workgroup_uint
         %12 = OpLabel
         %14 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %10 %uint_8
         %15 = OpLoad %uint %14 Aligned 4
         %16 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
         %17 = OpCompositeExtract %uint %16 0
         %18 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %11 %17
               OpStore %18 %15 Aligned 4
         %19 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %10 %17
               OpStore %19 %17 Aligned 4
               OpReturn
               OpFunctionEnd
